Don't skip for the latest release

--- a/build.xml
+++ b/build.xml
@@ -115,7 +115,7 @@
         <equals arg1="@{version}" arg2="latest"/>
         <then>
           <var name="bravesetup.url" value="${bravesetup.latest.@{arch}}"/>
-          <var name="bravesetup.skip" value="true"/>
+          <var name="bravesetup.skip" value="false"/>
         </then>
         <else>
           <var file="${project.basedir}/setup.properties" prefix="setup"/>
