New release of Brave : 0.15.2 Provide the nupkg file in the release Add Go report card Move log file to the root folder Add Glide dependency manager for Go Standard code organization MIT license

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Jetbrains
+# Intellij
 /.idea
 /*.iml
 
@@ -6,4 +6,7 @@
 /.dev
 /bin
 /res/*.pspimage
-*.syso
+/vendor
+/*.syso
+/*.exe
+/versioninfo.json
