--- a/build.properties
+++ b/build.properties
@@ -5,11 +5,13 @@ app.desc = Make Brave portable on Windows
 app.url = https://github.com/crazy-max/brave-portable
 app.default.release = 0
 
-# Brave
-bravesetup.version = latest
-bravesetup.latest.ia32 = https://laptop-updates.brave.com/latest/winia32
-bravesetup.latest.x64 = https://laptop-updates.brave.com/latest/winx64
-brave.executionstub = Brave_ExecutionStub.exe
+# Artefact
+atf.id = Brave
+atf.setupname = BraveSetup
+atf.executionstub = Brave_ExecutionStub.exe
+atf.url.ia32 = https://laptop-updates.brave.com/latest/winia32
+atf.url.x64 = https://laptop-updates.brave.com/latest/winx64
+atf.libfolder = lib/net45
 
 # The build folder (default bin)
 bin.dir = bin
@@ -20,6 +22,7 @@ res.dir = res
 # Libs
 antcontrib.url = http://search.maven.org/remotecontent?filepath=ant-contrib/ant-contrib/1.0b3/ant-contrib-1.0b3.jar
 7zipextra.url = https://dl.bintray.com/crazy/tools/7z1604-extra.zip
+glide.url = https://github.com/Masterminds/glide/releases/download/v0.12.3/glide-v0.12.3-windows-386.zip
 rcedit.url = https://github.com/electron/rcedit/releases/download/v0.1.0/rcedit.exe
 innoextract.url = http://constexpr.org/innoextract/files/innoextract-1.6-windows.zip
 innosetup.url = http://files.jrsoftware.org/is/5/isetup-5.5.8.exe
