Switch to Golang Dep as dependency manager

--- a/build.properties
+++ b/build.properties
@@ -22,7 +22,7 @@ res.dir = res
 # Libs
 antcontrib.url = http://search.maven.org/remotecontent?filepath=ant-contrib/ant-contrib/1.0b3/ant-contrib-1.0b3.jar
 7zipextra.url = https://dl.bintray.com/crazy/tools/7z1604-extra.zip
-glide.url = https://github.com/Masterminds/glide/releases/download/v0.12.3/glide-v0.12.3-windows-386.zip
+dep.url = https://github.com/golang/dep/releases/download/v0.3.1/dep-windows-amd64
 rcedit.url = https://github.com/electron/rcedit/releases/download/v0.1.0/rcedit.exe
 innoextract.url = http://constexpr.org/innoextract/files/innoextract-1.6-windows.zip
 innosetup.url = http://files.jrsoftware.org/is/5/isetup-5.5.8.exe
