--- a/build.properties
+++ b/build.properties
@@ -1,28 +1,22 @@
-# App
-app.id = brave-portable
-app.name = Brave Portable
-app.desc = Make Brave portable on Windows
-app.url = https://github.com/crazy-max/brave-portable
-app.default.release = 0
+# Portapps
+#core.dir = vendor/github.com/portapps/portapps
+core.dir = ../portapps
 
-# Artefact
+# App
+app = brave
+app.name = Brave
+
+# Portable app
+papp.id = ${brave}-portable
+papp.guid = {8AEE810B-2E26-4D32-B54F-64313E55C4AC}
+papp.name = ${app.name} Portable
+papp.desc = ${app.name} portable on Windows by Portapps
+papp.url = https://github.com/portapps/${papp.id}
+
+# Official artifacts
 atf.id = Brave
 atf.setupname = BraveSetup
 atf.executionstub = Brave_ExecutionStub.exe
 atf.url.ia32 = https://laptop-updates.brave.com/latest/winia32
 atf.url.x64 = https://laptop-updates.brave.com/latest/winx64
 atf.libfolder = lib/net45
-
-# The build folder (default bin)
-bin.dir = bin
-
-# The resources folder (default res)
-res.dir = res
-
-# Libs
-antcontrib.url = http://search.maven.org/remotecontent?filepath=ant-contrib/ant-contrib/1.0b3/ant-contrib-1.0b3.jar
-7zipextra.url = https://dl.bintray.com/crazy/tools/7z1604-extra.zip
-dep.url = https://github.com/golang/dep/releases/download/v0.3.1/dep-windows-amd64
-rcedit.url = https://github.com/electron/rcedit/releases/download/v0.1.0/rcedit.exe
-innoextract.url = http://constexpr.org/innoextract/files/innoextract-1.6-windows.zip
-innosetup.url = http://files.jrsoftware.org/is/5/isetup-5.5.8.exe
