--- a/build.xml
+++ b/build.xml
@@ -1,382 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="brave-portable" basedir=".">
+<project name="brave" basedir=".">
 
-  <dirname property="project.basedir" file="${ant.file.brave-portable}"/>
-  <property name="build.properties" value="${project.basedir}/build.properties"/>
+  <dirname property="app.basedir" file="${ant.file.brave}"/>
+  <property name="build.properties" value="${app.basedir}/build.properties"/>
   <property file="${build.properties}"/>
 
-  <!-- Properties -->
-  <property environment="env"/>
-  <property name="bin.path" value="${project.basedir}\${bin.dir}"/>
-  <property name="res.path" value="${project.basedir}\${res.dir}"/>
-  <property name="build.path" value="${bin.path}\build"/>
-  <property name="setup.path" location="${bin.path}\setup"/>
-  <property name="release.path" value="${bin.path}\release"/>
-  <property name="lib.path" value="${bin.path}\lib"/>
-  <property name="tmp.path" value="${bin.path}\tmp"/>
-  <property name="extract.path" value="${tmp.path}\extract"/>
-  <property name="nupkg.path" value="${tmp.path}\nupkg"/>
-  <property name="7za" value="${lib.path}\7zipextra\7za.exe"/>
-  <property name="dep" value="${lib.path}\dep.exe"/>
-  <property name="rcedit" value="${lib.path}\rcedit\rcedit.exe"/>
-  <property name="innoextract" location="${lib.path}\innoextract\innoextract.exe"/>
-  <property name="innosetup.path" location="${lib.path}\innosetup"/>
-  <property name="iscc" location="${innosetup.path}\app\ISCC.exe"/>
+  <!-- Load Portapps core build -->
+  <property name="core.basedir" location="${app.basedir}\${core.dir}"/>
+  <fail unless="core.basedir" message="Core directory '${core.basedir}' not found in ${core.basedir}"/>
+  <echo message="Core found in ${core.basedir}" level="debug"/>
 
-  <!-- Functions -->
-  <scriptdef name="randomstring" language="javascript">
-    <attribute name="property"/>
-    <![CDATA[
-    var SecureRandom = java.security.SecureRandom;
-    var BigInteger = java.math.BigInteger;
-    project.setProperty(attributes.get("property"), new BigInteger(130, new SecureRandom()).toString(32));
-    ]]>
-  </scriptdef>
+  <!-- Import build-app.xml  -->
+  <import file="${core.basedir}\.build\build-app.xml"/>
 
-  <macrodef name="sevenzip">
-    <attribute name="src"/>
-    <attribute name="dest"/>
-    <attribute name="format" default="7z"/>
-    <sequential>
-      <if>
-        <equals arg1="@{format}" arg2="7z"/>
-        <then>
-          <echo message="Compressing @{src} to @{dest}..."/>
-          <exec executable="${7za}" failonerror="true">
-            <arg value="a"/>
-            <arg value="-t7z"/>
-            <arg value="@{dest}"/>
-            <arg value="@{src}"/>
-            <arg value="-m0=LZMA2"/>
-            <arg value="-mx9"/>
-            <arg value="-mmt2"/>
-          </exec>
-        </then>
-        <elseif>
-          <equals arg1="@{format}" arg2="zip"/>
-          <then>
-            <echo message="Compressing @{src} to @{dest}..."/>
-            <exec executable="${7za}" failonerror="true">
-              <arg value="a"/>
-              <arg value="-mm=Deflate"/>
-              <arg value="-mfb=258"/>
-              <arg value="-mpass=15"/>
-              <arg value="-r"/>
-              <arg value="@{dest}"/>
-              <arg value="@{src}"/>
-            </exec>
-          </then>
-        </elseif>
-        <else>
-          <fail message="Unknown format: @{format}"/>
-        </else>
-      </if>
-    </sequential>
-  </macrodef>
-
-  <macrodef name="unsevenzip">
-    <attribute name="src"/>
-    <attribute name="dest"/>
-    <sequential>
-      <echo message="Extracting @{src} to @{dest}..."/>
-      <exec executable="${7za}" failonerror="true">
-        <arg value="x"/>
-        <arg value="@{src}"/>
-        <arg value="-o@{dest}"/>
-      </exec>
-    </sequential>
-  </macrodef>
-
-  <macrodef name="assertdir">
-    <attribute name="dir"/>
-    <sequential>
-      <fail message="Directory '@{dir}' does not exist">
-        <condition><not><available file="@{dir}" type="dir"/></not></condition>
-      </fail>
-    </sequential>
-  </macrodef>
-
-  <macrodef name="assertfile">
-    <attribute name="file"/>
-    <sequential>
-      <fail message="File '@{file}' does not exist">
-        <condition><not><available file="@{file}" type="file"/></not></condition>
-      </fail>
-    </sequential>
-  </macrodef>
-
-  <!-- Build number -->
-  <condition property="app.release" value="${env.APPVEYOR_BUILD_NUMBER}"><isset property="env.APPVEYOR_BUILD_NUMBER"/></condition>
-  <condition property="app.release" value="${app.default.release}"><not><isset property="env.APPVEYOR_BUILD_NUMBER"/></not></condition>
-
-  <target name="setup" depends="init, dep" description="Setup workspace"/>
-
-  <target name="release" depends="init" description="Release">
-    <randomstring property="app.buildid"/>
-    <echo message="Generated build id: ${app.buildid}"/>
-    <if>
-      <isset property="atf.url.ia32"/>
-      <then>
-        <antcall target="release.arch">
-          <param name="atf.arch" value="ia32"/>
-          <param name="atf.url" value="${atf.url.ia32}"/>
-          <param name="goarch" value="386"/>
-        </antcall>
-        <echo file="${tmp.path}\${app.buildid}" append="false">${app.buildid}</echo>
-      </then>
-    </if>
-    <if>
-      <isset property="atf.url.x64"/>
-      <then>
-        <antcall target="release.arch">
-          <param name="atf.arch" value="x64"/>
-          <param name="atf.url" value="${atf.url.x64}"/>
-          <param name="goarch" value="amd64"/>
-        </antcall>
-        <echo file="${tmp.path}\${app.buildid}" append="false">${app.buildid}</echo>
-      </then>
-    </if>
-  </target>
-
-  <target name="init" depends="load.libs">
-    <mkdir dir="${bin.path}"/>
-    <mkdir dir="${lib.path}"/>
-    <delete dir="${build.path}"/>
-    <mkdir dir="${build.path}"/>
-    <delete dir="${setup.path}"/>
-    <mkdir dir="${setup.path}"/>
-    <delete dir="${extract.path}"/>
-    <mkdir dir="${extract.path}"/>
-    <delete dir="${nupkg.path}"/>
-    <mkdir dir="${nupkg.path}"/>
-  </target>
-
-  <target name="load.libs" unless="is.lib.loaded" depends="
-      load.lib.antcontrib,
-      load.lib.sevenzip,
-      load.lib.dep,
-      load.lib.rcedit,
-      load.lib.innosetup">
-    <var name="is.lib.loaded" value="true"/>
-  </target>
-
-  <target name="load.lib.antcontrib" unless="is.lib.loaded">
-    <echo message="Load ANT Contrib"/>
-    <mkdir dir="${lib.path}\ant-contrib"/>
-    <get dest="${lib.path}\ant-contrib\ant-contrib.jar" src="${antcontrib.url}" skipexisting="true"/>
-    <taskdef resource="net/sf/antcontrib/antlib.xml">
-      <classpath>
-        <fileset dir="${lib.path}/ant-contrib">
-          <include name="**/*.jar"/>
-        </fileset>
-      </classpath>
-    </taskdef>
-  </target>
-
-  <target name="load.lib.sevenzip" unless="is.lib.loaded">
-    <echo message="Load 7zip"/>
-    <get dest="${lib.path}\7zipextra.zip" src="${7zipextra.url}" skipexisting="true"/>
-    <if>
-      <not><available file="${lib.path}\7zipextra" type="dir"/></not>
-      <then>
-        <unzip src="${lib.path}\7zipextra.zip" dest="${lib.path}\7zipextra"/>
-      </then>
-    </if>
-  </target>
-
-  <target name="load.lib.dep" unless="is.lib.loaded">
-    <echo message="Load Dep"/>
-    <get dest="${dep}" src="${dep.url}" skipexisting="true"/>
-    <assertfile file="${dep}"/>
-  </target>
-
-  <target name="load.lib.rcedit" unless="is.lib.loaded">
-    <echo message="Load Rcedit"/>
-    <mkdir dir="${lib.path}\rcedit"/>
-    <get dest="${lib.path}\rcedit\rcedit.exe" src="${rcedit.url}" skipexisting="true"/>
-  </target>
-
-  <target name="load.lib.innoextract" unless="is.lib.loaded">
-    <echo message="Load innoextract"/>
-    <get dest="${lib.path}\innoextract.zip" src="${innoextract.url}" skipexisting="true"/>
-    <if>
-      <not><available file="${lib.path}\innoextract" type="dir"/></not>
-      <then>
-        <unzip src="${lib.path}\innoextract.zip" dest="${lib.path}\innoextract"/>
-      </then>
-    </if>
-  </target>
-
-  <target name="load.lib.innosetup" depends="load.lib.innoextract" unless="is.lib.loaded">
-    <echo message="Load InnoSetup"/>
-    <get dest="${lib.path}\innosetup.exe" src="${innosetup.url}" skipexisting="true"/>
-    <if>
-      <not><available file="${innosetup.path}\app" type="dir"/></not>
-      <then>
-        <exec executable="${innoextract}">
-          <arg value="-d"/>
-          <arg value="${innosetup.path}"/>
-          <arg value="${lib.path}\innosetup.exe"/>
-        </exec>
-      </then>
-    </if>
-    <assertfile file="${iscc}"/>
-  </target>
-
-  <target name="clear">
-    <if>
-      <not><available file="${tmp.path}\${app.buildid}" type="file"/></not>
-      <then><delete dir="${release.path}"/></then>
-    </if>
-    <mkdir dir="${release.path}"/>
-  </target>
-
-  <target name="download">
-    <echo message="Downloading ${atf.id}..."/>
-    <property name="atf.setupdest" location="${tmp.path}\${atf.setupname}-${atf.arch}.exe"/>
-    <get dest="${atf.setupdest}" src="${atf.url}" skipexisting="false"/>
-  </target>
-
-  <target name="extract">
-    <echo message="Extracting ${atf.setupdest}..."/>
-    <unsevenzip src="${atf.setupdest}" dest="${extract.path}"/>
-
-    <first id="first.nupkg">
-      <fileset dir="${extract.path}" includes="*.nupkg"/>
-    </first>
-    <condition property="atf.nupkg" value="${toString:first.nupkg}">
-      <available file="${toString:first.nupkg}" type="file"/>
-    </condition>
-    <fail unless="atf.nupkg" message="Nupkg file not found"/>
-    <echo message="Nupkg found : ${atf.nupkg}"/>
-
-    <unsevenzip src="${atf.nupkg}" dest="${nupkg.path}"/>
-    <condition property="atf.libpath" value="${nupkg.path}\${atf.libfolder}">
-      <available file="${nupkg.path}\${atf.libfolder}\${atf.id}.exe" type="file"/>
-    </condition>
-    <fail unless="atf.libpath" message="Artefact lib path not found"/>
-
-    <echo message="Metadata found:"/>
-    <xmlproperty file="${nupkg.path}/${atf.id}.nuspec" collapseAttributes="true"/>
-    <echo message="* ID      : ${package.metadata.id}"/>
-    <echo message="* Title   : ${package.metadata.title}"/>
-    <echo message="* Version : ${package.metadata.version}"/>
-    <property name="app.version" value="${package.metadata.version}"/>
-  </target>
-
-  <target name="filterset">
-    <filterset id="filterset.app">
-      <filter token="APP_ID" value="${app.id}"/>
-      <filter token="APP_NAME" value="${app.name}"/>
-      <filter token="APP_DESC" value="${app.desc}"/>
-      <filter token="APP_VERSION" value="${app.version}"/>
-      <filter token="APP_RELEASE" value="${app.release}"/>
-      <filter token="APP_COPYRIGHT" value="${app.url}"/>
-    </filterset>
-    <echo message="APP_ID        : ${app.id}"/>
-    <echo message="APP_NAME      : ${app.name}"/>
-    <echo message="APP_DESC      : ${app.desc}"/>
-    <echo message="APP_VERSION   : ${app.version}"/>
-    <echo message="APP_RELEASE   : ${app.release}"/>
-    <echo message="APP_COPYRIGHT : ${app.url}"/>
-  </target>
-
-  <target name="dep" description="Install vendor">
-    <exec executable="${dep}" failonerror="true" dir="${project.basedir}">
-      <arg value="ensure"/>
-      <arg value="-v"/>
-    </exec>
-  </target>
-
-  <target name="generate" description="Go generate">
-    <copy file="${res.path}/versioninfo.json" todir="${project.basedir}" overwrite="true">
-      <filterset refid="filterset.app"/>
-    </copy>
-    <exec executable="go" failonerror="true" dir="${project.basedir}">
-      <env key="GOARCH" value="${goarch}"/>
-      <arg value="generate"/>
-      <arg value="-v"/>
-    </exec>
-  </target>
-
-  <target name="build" depends="dep, generate">
-    <exec executable="go" failonerror="true" dir="${project.basedir}">
-      <env key="GOARCH" value="${goarch}"/>
-      <arg value="build"/>
-      <arg value="-o"/>
-      <arg value="${tmp.path}\${app.id}.exe"/>
-      <arg value="-v"/>
-      <arg value="-ldflags"/>
-      <arg value="-s -w -H=windowsgui"/>
-    </exec>
-    <assertfile file="${tmp.path}\${app.id}.exe"/>
-  </target>
-
-  <target name="release.arch" depends="init, clear, download, extract, filterset, build">
-    <echo message="Preparing release..."/>
-    <if>
-      <isset property="atf.executionstub"/>
-      <then>
-        <copy file="${nupkg.path}\${atf.libfolder}\${atf.executionstub}" tofile="${build.path}\${atf.id}.exe" overwrite="true"/>
-        <copy todir="${build.path}\app-${app.version}">
-          <fileset dir="${atf.libpath}" excludes="${atf.executionstub}"/>
-        </copy>
-      </then>
-      <else>
-        <copy todir="${build.path}\app-${app.version}">
-          <fileset dir="${atf.libpath}"/>
-        </copy>
-      </else>
-    </if>
-
-    <copy todir="${build.path}" file="${extract.path}\Update.exe"/>
-    <exec executable="${rcedit}" failonerror="true" dir="${build.path}">
-      <arg value="${build.path}/Update.exe"/>
-      <arg value="--set-icon"/>
-      <arg value="${res.path}/app.ico"/>
-    </exec>
-
-    <mkdir dir="${build.path}\packages"/>
-    <copy file="${extract.path}\RELEASES" todir="${build.path}\packages" failonerror="false"/>
-    <copy file="${project.basedir}\README.md" todir="${build.path}" overwrite="true"/>
-
-    <copy file="${tmp.path}\${app.id}.exe" todir="${build.path}" overwrite="true"/>
-    <copy file="${res.path}\app.ico" todir="${build.path}" overwrite="true"/>
-
-    <echo message="Writing version.dat..."/>
-    <echo file="${tmp.path}\version.dat" append="false">${app.version}-${app.release}</echo>
-
-    <echo message="Creating release files"/>
-    <copy file="${tmp.path}\${app.id}.exe" tofile="${release.path}\${app.id}-${atf.arch}.exe" overwrite="true"/>
-    <copy file="${atf.setupdest}" tofile="${release.path}\${atf.setupname}-${atf.arch}-${app.version}.exe" overwrite="true"/>
-    <copy file="${atf.nupkg}" tofile="${release.path}\${atf.id}-${atf.arch}-${app.version}-full.nupkg" overwrite="true"/>
-
-    <sevenzip src="${build.path}/*" dest="${release.path}\${app.id}-${atf.arch}-${app.version}-${app.release}.7z" format="7z"/>
-
-    <echo message="Building setup"/>
-    <copy todir="${setup.path}\src">
-      <fileset dir="${build.path}"/>
-    </copy>
-    <copy todir="${setup.path}">
-      <fileset dir="${res.path}">
-        <include name="setup*"/>
-        <include name="app-portable.ico"/>
-      </fileset>
-    </copy>
-    <copy file="${project.basedir}\LICENSE" tofile="${setup.path}\license.txt"/>
-    <copy file="${res.path}\setup.iss" tofile="${setup.path}\setup.iss" overwrite="true">
-      <filterset>
-        <filter token="APP_ID" value="${app.id}"/>
-        <filter token="APP_NAME" value="${app.name}"/>
-        <filter token="APP_VERSION" value="${app.version}-${app.release}"/>
-        <filter token="APP_URL" value="${app.url}"/>
-      </filterset>
-    </copy>
-    <exec executable="${iscc}" dir="${setup.path}" failonerror="true">
-      <arg value="/O${release.path}"/>
-      <arg value="/F${app.id}-${atf.arch}-${app.version}-${app.release}-setup"/>
-      <arg value="setup.iss"/>
-    </exec>
-  </target>
+  <!-- Targets -->
+  <target name="release" depends="papps-app.release" description="Release"/>
 
 </project>
