--- a/build.properties
+++ b/build.properties
@@ -7,7 +7,7 @@ app = brave
 app.name = Brave
 
 # Portable app
-papp.id = ${brave}-portable
+papp.id = ${app}-portable
 papp.guid = {8AEE810B-2E26-4D32-B54F-64313E55C4AC}
 papp.name = ${app.name} Portable
 papp.desc = ${app.name} portable on Windows by Portapps
