Update with latest portapps release

--- a/build.properties
+++ b/build.properties
@@ -5,6 +5,7 @@ core.dir = ../portapps
 # App
 app = brave
 app.name = Brave
+app.type = electron
 
 # Portable app
 papp.id = ${app}-portable
@@ -13,10 +14,17 @@ papp.name = ${app.name} Portable
 papp.desc = ${app.name} portable on Windows by Portapps
 papp.url = https://github.com/portapps/${papp.id}
 
+# Electron
+electron.executionstub = Brave_ExecutionStub.exe
+electron.libfolder = lib/net45
+
 # Official artifacts
 atf.id = Brave
-atf.setupname = BraveSetup
-atf.executionstub = Brave_ExecutionStub.exe
-atf.url.ia32 = https://laptop-updates.brave.com/latest/winia32
-atf.url.x64 = https://laptop-updates.brave.com/latest/winx64
-atf.libfolder = lib/net45
+atf.ia32.filename = BraveSetup-ia32
+atf.ia32.ext = .exe
+atf.ia32.url = https://laptop-updates.brave.com/latest/winia32
+atf.ia32.assertextract = RELEASES
+atf.x64.filename = BraveSetup-x64
+atf.x64.ext = .exe
+atf.x64.url = https://laptop-updates.brave.com/latest/winx64
+atf.x64.assertextract = RELEASES
