Move app to a subfolder

--- a/build.properties
+++ b/build.properties
@@ -13,6 +13,7 @@ papp.guid = {8AEE810B-2E26-4D32-B54F-64313E55C4AC}
 papp.name = ${app.name} Portable
 papp.desc = ${app.name} portable on Windows by Portapps
 papp.url = https://github.com/portapps/${papp.id}
+papp.folder = app
 
 # Electron
 electron.executionstub = Brave_ExecutionStub.exe
