Move ia32/x64 to win32/win64 for arch def Remove nupkg file

--- a/build.properties
+++ b/build.properties
@@ -23,11 +23,11 @@ electron.userdata.replace = app.setPath('userData', path.join(path.dirname(proce
 
 # Official artifacts
 atf.id = Brave
-atf.ia32.filename = BraveSetup-ia32
-atf.ia32.ext = .exe
-atf.ia32.url = https://laptop-updates.brave.com/latest/winia32
-atf.ia32.assertextract = RELEASES
-atf.x64.filename = BraveSetup-x64
-atf.x64.ext = .exe
-atf.x64.url = https://laptop-updates.brave.com/latest/winx64
-atf.x64.assertextract = RELEASES
+atf.win32.filename = BraveSetup-win32
+atf.win32.ext = .exe
+atf.win32.url = https://laptop-updates.brave.com/latest/winia32
+atf.win32.assertextract = RELEASES
+atf.win64.filename = BraveSetup-win64
+atf.win64.ext = .exe
+atf.win64.url = https://laptop-updates.brave.com/latest/winx64
+atf.win64.assertextract = RELEASES
