--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,7 @@ platform:
   - x64
 
 clone_folder: C:\gopath\src\github.com\portapps\brave-portable
+test: off
 
 environment:
   JAVA_HOME: C:\Program Files\Java\jdk1.8.0
