Upgrade to Brave 0.22.13

--- a/build.properties
+++ b/build.properties
@@ -6,6 +6,7 @@ core.dir = ../portapps
 app = brave
 app.name = Brave
 app.type = electron
+app.version = 0.22.13
 
 # Portable app
 papp.id = ${app}-portable
@@ -18,6 +19,7 @@ papp.folder = app
 # Electron
 electron.executionstub = Brave_ExecutionStub.exe
 electron.libfolder = lib/net45
+electron.enableautoupdate = false
 electron.userdata.search = // Set the user path according to application's name.
 electron.userdata.replace = app.setPath('userData', path.join(path.dirname(process.execPath), '..', '..', 'data'))
 
@@ -25,9 +27,9 @@ electron.userdata.replace = app.setPath('userData', path.join(path.dirname(proce
 atf.id = Brave
 atf.win32.filename = BraveSetup-win32
 atf.win32.ext = .exe
-atf.win32.url = https://laptop-updates.brave.com/latest/winia32
+atf.win32.url = https://github.com/brave/browser-laptop/releases/download/v${app.version}dev/BraveSetup-ia32.exe
 atf.win32.assertextract = RELEASES
 atf.win64.filename = BraveSetup-win64
 atf.win64.ext = .exe
-atf.win64.url = https://laptop-updates.brave.com/latest/winx64
+atf.win64.url = https://github.com/brave/browser-laptop/releases/download/v${app.version}dev/BraveSetup-x64.exe
 atf.win64.assertextract = RELEASES
