--- a/build.properties
+++ b/build.properties
@@ -1,12 +1,13 @@
 # Portapps
+debug = true
 #core.dir = vendor/github.com/portapps/portapps
 core.dir = ../portapps
 
 # App
 app = brave
 app.name = Brave
-app.type = electron
-app.version = 0.25.2
+app.type = archive
+app.version = 0.55.20
 
 # Portable app
 papp.id = ${app}-portable
@@ -16,20 +17,13 @@ papp.desc = ${app.name} portable on Windows by Portapps
 papp.url = https://github.com/portapps/${papp.id}
 papp.folder = app
 
-# Electron
-electron.executionstub = Brave_ExecutionStub.exe
-electron.libfolder = lib/net45
-electron.enableautoupdate = false
-electron.userdata.search = // Set the user path according to application's name.
-electron.userdata.replace = app.setPath('userData', path.join(path.dirname(process.execPath), '..', '..', 'data'))
-
 # Official artifacts
 atf.id = Brave
-atf.win32.filename = BraveSetup-win32
+atf.win32.filename = brave_installer-win32
 atf.win32.ext = .exe
-atf.win32.url = https://github.com/brave/browser-laptop/releases/download/v${app.version}dev/BraveSetup-ia32.exe
-atf.win32.assertextract = RELEASES
-atf.win64.filename = BraveSetup-win64
+atf.win32.url = https://github.com/portapps/untouched/releases/download/brave-${app.version}/brave_installer-ia32.exe
+atf.win32.assertextract = chrome.7z
+atf.win64.filename = brave_installer-win64
 atf.win64.ext = .exe
-atf.win64.url = https://github.com/brave/browser-laptop/releases/download/v${app.version}dev/BraveSetup-x64.exe
-atf.win64.assertextract = RELEASES
+atf.win64.url = https://github.com/portapps/untouched/releases/download/brave-${app.version}/brave_installer-x64.exe
+atf.win64.assertextract = chrome.7z
