--- a/build.xml
+++ b/build.xml
@@ -16,4 +16,17 @@
   <!-- Targets -->
   <target name="release" depends="release.app" description="Release"/>
 
+  <target name="prepare">
+    <echo message="Preparing release..."/>
+    <delete dir="${tmp.path}\extract2"/>
+
+    <echo message="Extracting embedded chrome.7z"/>
+    <property name="extract.path2" value="${tmp.path}\extract2"/>
+    <sevenzip-ax src="${extract.path}\chrome.7z" dest="${extract.path2}"/>
+    <delete dir="${extract.path}"/>
+    <move todir="${extract.path}">
+      <fileset dir="${extract.path2}\Chrome-bin"/>
+    </move>
+  </target>
+
 </project>
